--- a/MinesweeperBot/MinesweeperBot.csproj
+++ b/MinesweeperBot/MinesweeperBot.csproj
@@ -46,6 +46,10 @@
     <Reference Include="MathNet.Numerics.IO">
       <HintPath>MathNet.Numerics-2.5.0.27\Net40\MathNet.Numerics.IO.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.6.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Program Files\MySQL\MySQL Connector Net 6.6.5\Assemblies\v4.0\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
@@ -93,6 +97,12 @@
     <Compile Include="MinesweeperInterface.Designer.cs">
       <DependentUpon>MinesweeperInterface.cs</DependentUpon>
     </Compile>
+    <Compile Include="MySQLConsole.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MySQLConsole.Designer.cs">
+      <DependentUpon>MySQLConsole.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RECT.cs" />
@@ -118,6 +128,9 @@
     <EmbeddedResource Include="MinesweeperInterface.resx">
       <DependentUpon>MinesweeperInterface.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MySQLConsole.resx">
+      <DependentUpon>MySQLConsole.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -139,6 +152,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="MySql.Data.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
