datapoints moved from XML to SQLite

--- a/MinesweeperBot/MinesweeperBot.csproj
+++ b/MinesweeperBot/MinesweeperBot.csproj
@@ -13,6 +13,21 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -46,12 +61,12 @@
     <Reference Include="MathNet.Numerics.IO">
       <HintPath>MathNet.Numerics-2.5.0.27\Net40\MathNet.Numerics.IO.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.6.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\Program Files\MySQL\MySQL Connector Net 6.6.5\Assemblies\v4.0\MySql.Data.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\SQLite.NET\bin\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -71,6 +86,7 @@
     </Compile>
     <Compile Include="CentroidSet.cs" />
     <Compile Include="DataPoint.cs" />
+    <Compile Include="FormatHelper.cs" />
     <Compile Include="GameSolver.cs" />
     <Compile Include="GenuineRandomGenerator.cs" />
     <Compile Include="KMeans.cs">
@@ -97,11 +113,12 @@
     <Compile Include="MinesweeperInterface.Designer.cs">
       <DependentUpon>MinesweeperInterface.cs</DependentUpon>
     </Compile>
-    <Compile Include="MySQLConsole.cs">
+    <Compile Include="ObjectDumper.cs" />
+    <Compile Include="SQLiteConsole.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MySQLConsole.Designer.cs">
-      <DependentUpon>MySQLConsole.cs</DependentUpon>
+    <Compile Include="SQLiteConsole.Designer.cs">
+      <DependentUpon>SQLiteConsole.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -128,8 +145,8 @@
     <EmbeddedResource Include="MinesweeperInterface.resx">
       <DependentUpon>MinesweeperInterface.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MySQLConsole.resx">
-      <DependentUpon>MySQLConsole.cs</DependentUpon>
+    <EmbeddedResource Include="SQLiteConsole.resx">
+      <DependentUpon>SQLiteConsole.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -143,6 +160,7 @@
     <EmbeddedResource Include="SupervisedLearningAlgo.resx">
       <DependentUpon>SupervisedLearningAlgo.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -155,6 +173,28 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MySql.Data.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4 Client Profile %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Windows.Installer.3.1">
+      <Visible>False</Visible>
+      <ProductName>Windows Installer 3.1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
