--- a/MinesweeperBot/MinesweeperBot.csproj
+++ b/MinesweeperBot/MinesweeperBot.csproj
@@ -61,11 +61,14 @@
     <Reference Include="MathNet.Numerics.IO">
       <HintPath>MathNet.Numerics-2.5.0.27\Net40\MathNet.Numerics.IO.dll</HintPath>
     </Reference>
+    <Reference Include="SQLite.Designer">
+      <HintPath>..\..\..\..\..\..\Program Files\System.Data.SQLite\2010\bin\SQLite.Designer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
+    <Reference Include="System.Data.SQLite, Version=1.0.85.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\SQLite.NET\bin\System.Data.SQLite.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\System.Data.SQLite\2010\bin\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
@@ -78,17 +81,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CentroidBatchLabel.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="CentroidBatchLabel.Designer.cs">
-      <DependentUpon>CentroidBatchLabel.cs</DependentUpon>
-    </Compile>
+    <Compile Include="ArtificialNeuralNetwork.cs" />
     <Compile Include="CentroidSet.cs" />
     <Compile Include="DataPoint.cs" />
     <Compile Include="FormatHelper.cs" />
     <Compile Include="GameSolver.cs" />
     <Compile Include="GenuineRandomGenerator.cs" />
+    <Compile Include="DBObject.cs" />
     <Compile Include="KMeans.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,12 +113,6 @@
       <DependentUpon>MinesweeperInterface.cs</DependentUpon>
     </Compile>
     <Compile Include="ObjectDumper.cs" />
-    <Compile Include="SQLiteConsole.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SQLiteConsole.Designer.cs">
-      <DependentUpon>SQLiteConsole.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RECT.cs" />
@@ -130,9 +123,6 @@
     <Compile Include="SupervisedLearningAlgo.Designer.cs">
       <DependentUpon>SupervisedLearningAlgo.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="CentroidBatchLabel.resx">
-      <DependentUpon>CentroidBatchLabel.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="KMeans.resx">
       <DependentUpon>KMeans.cs</DependentUpon>
     </EmbeddedResource>
@@ -144,9 +134,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MinesweeperInterface.resx">
       <DependentUpon>MinesweeperInterface.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SQLiteConsole.resx">
-      <DependentUpon>SQLiteConsole.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -170,9 +157,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="MySql.Data.dll" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
