--- a/MinesweeperBot/MinesweeperBot.csproj
+++ b/MinesweeperBot/MinesweeperBot.csproj
@@ -113,6 +113,7 @@
       <DependentUpon>MinesweeperInterface.cs</DependentUpon>
     </Compile>
     <Compile Include="ObjectDumper.cs" />
+    <Compile Include="PrincipalComponentAnalysis.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RECT.cs" />
