--- a/OpenGL.OpenCL.Test/Test.vcxproj.filters
+++ b/OpenGL.OpenCL.Test/Test.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="mainloop.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="myOpenCLContext.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="add_numbers.c">
